@@ -2,6 +2,7 @@ SVN
   * Restructured models and views to be more efficient
   * Added a submit request view
   * Added a scheduled packages tab to the result view
+  * Resulting package binaries can be viewed and downloaded
 
 0.7 - Mar 13 2008
   * Views can be exported to text files. Patch from Michal Vyskocil
